@@ -124,4 +124,7 @@ lpatom_get_release(const lpatom_t *atom);
 char *
 lpatom_get_qname(const lpatom_t *atom);
 
+char *
+lpatom_get_version(const lpatom_t *atom);
+
 #endif
